# 2D-Engine

./: .gitignore  CMakeLists.txt  Engine.cpp  Engine.h  GameLoop.cpp  GameLoop.h  InputManager.cpp  Renderer2D.cpp  Renderer2D.h
backend/: SceneSerializer.cpp
backend/core/: Engine.cpp  SceneState.h
backend/resource/: AssetRegistry.cpp  AssetRegistry.h
frontend/src/: EditorState.h
frontend/src/editor/: EditorUI.cpp
frontend/src/editor/Panels/: AssetPanel.cpp  ConsolePanel.cpp  HierarchyPanel.cpp  InspectorPanel.cpp  ScenePanel.cpp
include/: SDLTest.cpp
src/editor/: EditorUI.cpp  EditorUI.h
